# insumos

./: .gitignore  OFICIO 2026.docx  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Charts.jsx  Layout.jsx  Sidebar.jsx  Topbar.jsx  UI.jsx
src/context/: AppContext.jsx  DataContext.jsx
src/data/: mockData.js
src/pages/: Almacen.jsx  Aprobaciones.jsx  Auditoria.jsx  Catalogo.jsx  Configuracion.jsx  Dashboard.jsx  Dependencias.jsx  Login.jsx  Oficios.jsx  Presupuesto.jsx  Reportes.jsx  Solicitudes.jsx  Usuarios.jsx
src/styles/: global.css
src/utils/: alcance.js
