[package]
name = "sicig-vista"
version = "1.0.0"
description = "Vista de escritorio (solo frontend) del Sistema Integral de Control de Insumos Gubernamentales"
authors = ["Antonio Bernal Figueroa"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "sicig-vista"
path = "src/main.rs"
